# AI-agent

./: README.md  TESTCASE.md
mcp/dart-mcp/: .env.example  .gitignore  PRD.md  README.md  check_env.py  main.py  orchestrator.md  pyproject.toml
mcp/dart-mcp/config/: dart_field_mappings.yaml
mcp/dart-mcp/prompts/: doc_type_mapping.txt  query_extraction.txt  sufficiency_analysis.txt  synthesis.txt
mcp/dart-mcp/test_code/: test_pipeline_full.py
mcp/dart-mcp/tools/: __init__.py  dart_api_tools.py  dart_deep_search_tools.py  dart_tools.py
mcp/dart-mcp/utils/: __init__.py  cache.py  company_validator.py  config_loader.py  content_cleaner.py  corp_code_mapper.py  date_parser.py  document_downloader.py  document_extractor.py  llm_client.py  logging.py  parse_dart.py  rate_limiter.py
mcp/dart-mcp/workflow/: __init__.py  dart_orchestrator.py
mcp/dart-mcp/workflow/prompts/: document_filter.txt
mcp/dart-mcp/workflow/utils/: __init__.py  doc_type_mapper.py  document_fetcher.py  document_filter.py  query_expander.py  query_parser_langextract.py  sufficiency_checker.py  synthesizer.py
mcp/example-mcp/: pyproject.toml
mcp/example-mcp/app/: config.py  main.py
mcp/websearch-mcp/: pyproject.toml  test.py
mcp/websearch-mcp/app/: config.py  main.py
mcp/websearch-mcp/app/providers/: base.py  enums.py  google_cse.py  google_news_rss.py  naver_openapi.py  schema.py
mcp/websearch-mcp/app/tools/: base.py  schema.py  search_tool.py  url_detail_tool.py
mcp/websearch-mcp/app/utils/: http.py  normalize.py  rank.py
mcp/websearch-mcp/scripts/: start.sh
server/: .env.example  .gitignore  mcp.example.json  pyproject.toml  test.py  test_mcp.py
server/app/: main.py
server/app/_core/: config.py
server/app/api/: router.py  schema.py
server/app/api/v1/: chat.py  search.py
server/app/client/: agent.py  llm.py  mcp.py
