[project]
name = "example-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.10.1",
]


# 패키지 빌드를 위해 추가 필요
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# 패키지 빌드를 위해 추가 필요
[tool.hatch.build.targets.wheel]
packages = ["app"]

